# theoffice-orgchart

./: .gitignore  .template.env  README.md  app.py  build.py  docker-compose.yml  pyproject.toml
config/: 00_init.sh  00_init.sql  employee_types.py
handler/: cursor.py
models/: orgchart.py
pages/: ChainOfCommand.py  Home.py
tests/: conftest.py  test_id_generator.py  test_ui_components.py  test_validation.py
ui/: components.py  forms.py  styles.py
utilities/: connection_helper.py  errors.py  graph_builder.py  id_generator.py  session_helper.py  validation.py
